run tests in Maven with form and reduced perm-gen