@@ -4,7 +4,7 @@
     <groupId>org.jonnyzzz</groupId>
     <artifactId>namedMethods</artifactId>
     <packaging>jar</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1.0-SNAPSHOT</version>
     <name>namedMethods</name>
     <url>http://maven.apache.org</url>
     <dependencies>
@@ -30,6 +30,16 @@
                 <configuration>
                     <source>1.5</source>
                     <target>1.5</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.17</version>
+                <configuration>
+                    <forkCount>1</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx128m -XX:MaxPermSize=4m</argLine>
                 </configuration>
             </plugin>
         </plugins>
